tests/paczka1/fuzzy1/12690544.err
Error in line 7: Ii61 A982 41,0
Error in line 10: S155 S983 22,4
Error in line 25: ePJ7zoy5zT S155 12,5
Error in line 22: 0qKNbrof A272 69,1
Error in line 34: S155 A272 75,5
